xserver-xorg-video-openchrome (1:0.3.3+git20160310-1) UNRELEASED; urgency=medium

  * New upstream snapshot (Closes: #814682)
  * rules: Enable parallel builds.
  * Install shared libs in multiarch libdir.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 10 Mar 2016 15:34:35 +0200

xserver-xorg-video-openchrome (1:0.3.3-2) unstable; urgency=medium

  * control: Drop Julien Viard de Galbert and Cyril Brulebois from
    Uploaders.
  * control: Update homepage.
  * watch: Updated.
  * add-missing-include.diff: Fix build against xserver 1.18.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 09 Feb 2016 16:39:42 +0200

xserver-xorg-video-openchrome (1:0.3.3-1) unstable; urgency=low

  [ Maarten Lankhorst ]
  * Move to git.
  * Remove svn note in README.source
  * Remove README.VCS-source

  [ Timo Aaltonen ]
  * New upstream release. (LP: #1041625)
  * Remove 10-Deal-with-xserver-1.12.diff, not needed anymore.
  * control: Bump policy to 3.9.3, no changes.

  [ Maarten Lankhorst ]
  * New upstream release.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Wed, 25 Sep 2013 16:41:14 +0200

xserver-xorg-video-openchrome (1:0.2.906-1) unstable; urgency=low

  * New upstream release (Closes: #676507).
  * New patch: 10-Deal-with-xserver-1.12.diff (Closes: #675407), with
    thanks to Leon Winter for testing the initial patch and proposing
    a working one.
  * Add xutils-dev build-dep.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 08 Jun 2012 12:49:04 +0000

xserver-xorg-video-openchrome (1:0.2.904+svn1050-1) unstable; urgency=low

  * New upstream snapshot
    + 921: Fix XAA displaying issues
    + 922: Fix cursor garbare after suspend/hibernate/resume
           on VX855/VX900 chipsets #405
    + 923: Revert r922 changes (it added I420 support)
    + 924: Fix cursor garbage after suspen/resume for VX855 and VX900 (#405)
    + 925: Workaround EXA crash with new libcairo2 (#298)
    + 933: MSI PM9M-V (reported by Florin Rentea)
    + 1014: Hewlett Packard DX2020