@@ -35,3 +35,8 @@ override_dh_strip:
 
 %:
 	dh $@ --parallel --with quilt,autoreconf,xsf --builddirectory=build/
+
+gentarball: SOURCE=xserver-xorg-video-openchrome
+gentarball: UV=$(shell dpkg-parsechangelog|awk '/^Version:/ {print $$2}'|sed 's/^[0-9]*://;s/-.*$$//')
+gentarball:
+	git archive --format=tar upstream-unstable --prefix=$(SOURCE)-$(UV)/ | gzip -9 > ../$(SOURCE)_$(UV).orig.tar.gz
